small improvement in the Logger